--- a/hr_app/hr_search/templates/base.html
+++ b/hr_app/hr_search/templates/base.html
@@ -33,7 +33,7 @@
       {% block content %}{% endblock %}
       <!-- Include Bootstrap JS and its dependencies -->
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
       <!-- Include Bootstrap CSS and JavaScript libraries -->
  
